# akri-mqtt-discovery-handler

./: .gitignore  Cargo.toml  Dockerfile.discovery-handler  LICENSE  README.md
deploy/: akri-mqtt-configuration.yaml
src/: discovery_handler.rs  discovery_impl.rs  main.rs
